Fix menu z-index to be below bootstrap modal

--- a/app/assets/stylesheets/general/menu.scss
+++ b/app/assets/stylesheets/general/menu.scss
@@ -1,5 +1,5 @@
 #header {
-  z-index: 100000;
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
@@ -17,7 +17,7 @@
     color: $clouds;
     font-size: 30px;
     text-align: center;
-    z-index: 1000;
+    z-index: 900;
 
     line-height: $menu-width;
 
